Fix scaling issues for table and form overflow on mobile devices

--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -14,6 +14,11 @@
     padding: 20px;
   }
 
+  #form_inputs {
+    max-height: calc(100vh - 160px);
+    overflow: auto;
+  }
+
   .open,
   .closed {
     transition: max-height 0.5s ease;
@@ -21,7 +26,7 @@
   }
 
   .open {
-    max-height: 100vh;
+    max-height: 800px;
   }
 
   .closed {
