--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,3 +33,8 @@ input::placeholder {
 .mat-elevation-z8 {
   margin-bottom: 40px;
 }
+
+.table {
+  max-width: 100%;
+  overflow: auto;
+}
